[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/pickup.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 2.0

[sub_resource type="Animation" id=2]
length = 6.0
loop = true
step = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("display:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("display:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.97746, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 2, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="pickup" type="Spatial"]
script = ExtResource( 1 )

[node name="area" type="Area" parent="."]
gravity = 0.0

[node name="collision_shape" type="CollisionShape" parent="area"]
shape = SubResource( 1 )

[node name="display" type="Spatial" parent="."]

[node name="position_3d_1" type="Position3D" parent="display"]
transform = Transform( 0.70608, -0.00318604, 0.708125, 0.534529, 0.658296, -0.530024, -0.464467, 0.752753, 0.466512, 0.340132, 0.153206, -0.910289 )

[node name="position_3d_2" type="Position3D" parent="display"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0.47014, 0.0943964, 0.751702 )

[node name="position_3d_3" type="Position3D" parent="display"]
transform = Transform( 0.415916, 0.571851, 0.707107, -0.808719, 0.588195, -1.41401e-07, -0.415916, -0.571851, 0.707107, -0.717014, 0.569894, -0.0799359 )

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "spin"
anims/spin = SubResource( 2 )

[node name="timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
